GET#preview PeriodicalMailing.
